[package]
name = "lst"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.16", default-features = false }
linera-sdk = {git = "https://github.com/linera-io/linera-protocol", branch = "testnet_babbage"}
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_babbage", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }
fungible = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_babbage", features = ["test"] }

[[bin]]
name = "lst_contract"
path = "src/contract.rs"

[[bin]]
name = "lst_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
