[package]
name = "lst"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }
fungible = { workspace = true, features = ["test"] }

[[bin]]
name = "lst_contract"
path = "src/contract.rs"

[[bin]]
name = "lst_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
